# plotfox

./: README.md  mise.toml  pyproject.toml
src/plotfox/: __init__.py  ticker.py
